# leetcode

./: .gitignore  CMakeLists.txt  tsconfig.json
src/EASY/: 1. Two Sum.ts  1002. Find Common Characters.ts  1018. Binary Prefix Divisible By 5.ts  1030. Matrix Cells in Distance Order.ts  1042. Flower Planting With No Adjacent.ts  1046. Last Stone Weight.ts  1047. Remove All Adjacent Duplicates In String.ts  1122. Relative Sort Array.ts  1128. Number of Equivalent Domino Pairs.ts  1154. Day of the Year.ts  118. Pascal's Triangle.ts  1185. Day of the Week.ts  119. Pascal's Triangle II.ts  121. Best Time to Buy and Sell Stock.ts  122. Best Time to Buy and Sell Stock II.ts  1232. Check If It Is a Straight Line.ts  1260. 二维网格迁移.ts  1281. Subtract the Product and Sum of Digits of an Integer.ts  1287. Element Appearing More Than 25% In Sorted Array.ts  1317. Convert Integer to the Sum of Two No-Zero Integers.ts  1337. The K Weakest Rows in a Matrix.ts  1356. Sort Integers by The Number of 1 Bits.ts  1365. How Many Numbers Are Smaller Than the Current Number.ts  1370. Increasing Decreasing String.ts  1389. Create Target Array in the Given Order.ts  1399. Count Largest Group.ts  14. Longest Common Prefix.ts  1403. Minimum Subsequence in Non-Increasing Order.ts  141. Linked List Cycle.ts  1431. Kids With the Greatest Number of Candies.ts  1464. Maximum Product of Two Elements in an Array.ts  1475. Final Prices With a Special Discount in a Shop.ts  1486. XOR Operation in an Array.ts  1491. Average Salary Excluding the Minimum and Maximum Salary.ts  1507. Reformat Date.ts  1523. Count Odd Numbers in an Interval Range.ts  1528. Shuffle String.ts  1560. Most Visited Sector in  a Circular Track.ts  1572. Matrix Diagonal Sum.ts  1588. Sum of All Odd Length Subarrays.ts  (+108 more)
src/HARD/: 1012. Numbers With Repeated Digits.ts  1032. Stream of Characters.ts  1074-NumberOfSubmatricesThatSumToTarget.cpp  115. Distinct Subsequences.ts  1157. Online Majority Element In Subarray.ts  1178. Number of Valid Words for Each Puzzle.ts  1192. Critical Connections in a Network.ts  1203. Sort Items by Groups Respecting Dependencies.ts  123. Best Time to Buy and Sell Stock III.ts  1269. Number of Ways to Stay in the Same Place After Some Steps.cpp  1284. Minimum Number of Flips to Convert Binary Matrix to Zero Matrix.ts  1289. Minimum Falling Path Sum II.ts  1316. Distinct Echo Substrings.ts  132. Palindrome Partitioning II.ts  1330. Reverse Subarray To Maximize Array Value.ts  1349. Maximum Students Taking Exam.ts  135. Candy.ts  1359. Count All Valid Pickup and Delivery Options.ts  140. Word Break II.ts  1449-FormLargestIntegerWithDigitsThatAddUpToTarget.cpp  1458. Max Dot Product of Two Subsequences.ts  1463. Cherry Pickup II.ts  1467. Probability of a Two Boxes Having The Same Number of Distinct Balls.ts  1473. Paint House III.ts  1489. Find Critical and Pseudo-Critical Edges in Minimum Spanning Tree.ts  149-MaxPointsOnALine.cpp  1494. Parallel Courses II.ts  1499. Max Value of Equation.ts  1526. Minimum Number of Increments on Subarrays to Form a Target Array.ts  154. Find Minimum in Rotated Sorted Array II.ts  1563. Stone Game V.ts  1575. Count All Possible Routes.ts  1579. Remove Max Number of Edges to Keep Graph Fully Traversable.ts  1639. Number of Ways to Form a Target String Given a Dictionary.ts  164. Maximum Gap.ts  1675. Minimize Deviation in Array.ts  1681. Minimum Incompatibility.ts  1687. Delivering Boxes from Storage to Ports.ts  1691. Maximum Height by Stacking Cuboids.ts  1697. Checking Existence of Edge Length Limited Paths.ts  (+82 more)
src/MEDIUM/: 006. Clumsy Factorial.ts  1004. Max Consecutive Ones III.ts  1011. Capacity To Ship Packages Within D Days.ts  1016. Binary String With Substrings Representing 1 To N.ts  1026. Maximum Difference Between Node and Ancestor.ts  1027. Longest Arithmetic Subsequence.cpp  1034. Coloring A Border.ts  1035-Uncrossed-Lines .cpp  1041. Robot Bounded In Circle.ts  1043. Partition Array for Maximum Sum.ts  1048. Longest String Chain.cpp  1049-LastStoneWeightII.cpp  1052. Grumpy Bookstore Owner.ts  1054. Distant Barcodes.ts  1094. Car Pooling.ts  (+244 more)
types/: index.ts
utils/: BST.ts  DoubleListNode.ts  Heap.ts  PriorityQueue.ts  SegmentTree.ts  TrieTree.ts  UnionFind.ts  index.ts
(+394 files in other folders)
