cmake_minimum_required(VERSION 3.17)
project(leetcode)

set(CMAKE_CXX_STANDARD 14)

add_executable(Offer19-RegularExpressionMatching src/LCOF/HARD/Offer19-RegularExpressionMatching.cpp)
add_executable(Offer39-Mode src/LCOF/HARD/Offer39-Mode.cpp)
add_executable(1035-Uncrossed-Lines  "src/MEDIUM/1035-Uncrossed-Lines .cpp")
add_executable(Offer45-ArrangeTheArrayToSmallestNumber src/LCOF/MEDIUM/Offer45-ArrangeTheArrayToSmallestNumber.cpp)
add_executable(Offer49-UglyNumber src/LCOF/MEDIUM/Offer49-UglyNumber.cpp)
add_executable(Offer51-ReversePair src/LCOF/HARD/Offer51-ReversePair.cpp)