cmake_minimum_required(VERSION 3.17)
project(leetcode)

set(CMAKE_CXX_STANDARD 17)

add_executable(Offer19-RegularExpressionMatching src/LCOF/HARD/Offer19-RegularExpressionMatching.cpp)
add_executable(Offer39-Mode src/LCOF/HARD/Offer39-Mode.cpp)
add_executable(1035-Uncrossed-Lines  "src/MEDIUM/1035-Uncrossed-Lines .cpp")
add_executable(Offer45-ArrangeTheArrayToSmallestNumber src/LCOF/MEDIUM/Offer45-ArrangeTheArrayToSmallestNumber.cpp)
add_executable(Offer49-UglyNumber src/LCOF/MEDIUM/Offer49-UglyNumber.cpp)
add_executable(Offer51-ReversePair src/LCOF/HARD/Offer51-ReversePair.cpp)
add_executable(664-StrangePrinter src/HARD/664-StrangePrinter.cpp)
add_executable(1872-StoneGameVIII src/HARD/1872-StoneGameVIII.cpp)
add_executable(Offer60-TheNumberOfPointsOfNDice src/LCOF/MEDIUM/Offer60-TheNumberOfPointsOfNDice.cpp)
add_executable(Offer67-ConvertStringToInteger src/LCOF/MEDIUM/Offer67-ConvertStringToInteger.cpp)
add_executable(1787-MaketheXORofAllSegmentsEqualtoZero src/HARD/1787-MaketheXORofAllSegmentsEqualtoZero.cpp)
add_executable(CTCI-03-06-AnimalShelter src/CTCI/EASY/CTCI-03-06-AnimalShelter.cpp)
add_executable(CTCI-04-12-PathsWithSum src/CTCI/MEDIUM/CTCI-04-12-PathsWithSum.cpp)
add_executable(disscuss3 src/Unkown/disscuss3.cpp)
add_executable(CTCI-08-14-BooleanEvaluation src/CTCI/MEDIUM/CTCI-08-14-BooleanEvaluation.cpp)
add_executable(CTCI-08-07-PermutationI src/CTCI/MEDIUM/CTCI-08-07-PermutationI.cpp)
add_executable(1744-CanYouEatYourFavoriteCandyOnYourFavoriteDay src/MEDIUM/1744-CanYouEatYourFavoriteCandyOnYourFavoriteDay.cpp)
add_executable(CTCI-16-02-WordsFrequency src/CTCI/MEDIUM/CTCI-16-02-WordsFrequency.cpp)
add_executable(CTCI-16-03-Intersection src/CTCI/HARD/CTCI-16-03-Intersection.cpp)
add_executable(CTCI-16-08-EnglishInt src/CTCI/HARD/CTCI-16-08-EnglishInt.cpp)
add_executable(CTCI-16-10-LivingPeople src/CTCI/MEDIUM/CTCI-16-10-LivingPeople.cpp)

add_executable(CTCI-16-13-BisectSquares src/CTCI/MEDIUM/CTCI-16-13-BisectSquares.cpp)
add_executable(CTCI-16-18-PatternMatching src/CTCI/MEDIUM/CTCI-16-18-PatternMatching.cpp)
add_executable(CTCI-16-22-LangtonsAnt src/CTCI/MEDIUM/CTCI-16-22-LangtonsAnt.cpp)
add_executable(CTCI-17-07-BabyNames src/CTCI/MEDIUM/CTCI-17-07-BabyNames.cpp)
add_executable(test2 src/Unkown/test2.cpp)
add_executable(test3 src/Unkown/test3.cpp)
add_executable(discuss2-3 src/Unkown/discuss2-3.cpp)
add_executable(test2-1 src/Unkown/test2-1.cpp)
add_executable(188-BestTimeToBuyAndSellStockIV src/HARD/188-BestTimeToBuyAndSellStockIV.cpp)

add_executable(CTCI-17-25-WordRectangle src/CTCI/HARD/CTCI-17-25-WordRectangle.cpp)